--- a/Source/LeanBattleship.Web/LeanBattleship.Web.csproj
+++ b/Source/LeanBattleship.Web/LeanBattleship.Web.csproj
@@ -92,8 +92,8 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\GameEventController.cs" />
-    <Compile Include="Controllers\PlayController.cs" />
-    <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="Controllers\MatchController.cs" />
+    <Compile Include="Controllers\TournamentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
