--- a/Source/LeanBattleship.Web/LeanBattleship.Web.csproj
+++ b/Source/LeanBattleship.Web/LeanBattleship.Web.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Controllers\GameEventController.cs" />
     <Compile Include="Controllers\MatchController.cs" />
     <Compile Include="Controllers\TournamentController.cs" />
+    <Compile Include="Controllers\VersionDto.cs" />
     <Compile Include="Dto\TournametDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
