--- a/Source/LeanBattleship.Core/LeanBattleship.Core.csproj
+++ b/Source/LeanBattleship.Core/LeanBattleship.Core.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PlayerService.cs" />
     <Compile Include="Services\TournamentService.cs" />
