--- a/Source/LeanBattleship.Common/LeanBattleship.Common.csproj
+++ b/Source/LeanBattleship.Common/LeanBattleship.Common.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LeanBattleship.Core">
+      <HintPath>..\LeanBattleship.Web\Bin\LeanBattleship.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
