--- a/Source/LeanBattleship.Core/LeanBattleship.Core.csproj
+++ b/Source/LeanBattleship.Core/LeanBattleship.Core.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Game\GameServer.cs" />
     <Compile Include="Game\GameServerTick.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\MatchController.cs" />
+    <Compile Include="Services\MatchServiceServiceController.cs" />
     <Compile Include="Services\PlayerService.cs" />
     <Compile Include="Services\TournamentService.cs" />
   </ItemGroup>
